--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,3 +7,11 @@
               {{/each}}
               <br>
             </ul>
+
+
+             <p>
+                                    Welcome to
+                                    <strong>The Healthy Weight Challenge!</strong> We are here to help you reach your goals
+                                    one calorie at a time. Please take a moment to record your profile information accurately
+                                    so you can begin competing against other users by counting calories in a fun way.
+                                </p>
