--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,40 @@
 <h1 class="display-4">Article List:</h1>
-            <ul id="to-do-list" class="list-group">
-              {{#each examples}}
-              <li data-id="{{this.id}}" class="list-group-item">
-                <a href="index{{this.id}}">{{this.text}}</a>
-              </li>
-              {{/each}}
-              <br>
-            </ul>
+<ul id="to-do-list" class="list-group">
+  {{#each examples}}
+  <li data-id="{{this.id}}" class="list-group-item">
+    <a href="index{{this.id}}">{{this.text}}</a>
+  </li>
+  {{/each}}
+  <br>
+</ul>
 
-<div id = "articles"></div>
-          
+
+
+<div class="row">
+  <div class="col-7" id="articles" >
+  </div>
+  <div class="column-5" id="comments" >
+   <form role="form">
+      Username:
+      <input type="text" id="userName">
+      <br> Comment:
+      <textarea id="textArea" type="text" ></textarea>
+      <br>
+      <input type="submit" id="commentSubmit" value="Submit">
+    </form>
+    <div id="commentList"></div>
+  </div>
+</div>
+
+{{!-- 
+
+<div class="container">
+  <div class="row">
+  <div class="col-7-md float" ></div>
+  <div class="col-5-md " >
+  
+
+  </div>
+
+</div>
+</div> --}}
