--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    {{!-- <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8"> --}}
+    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Work+Sans" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Tech articles</title>
 </head>
 
@@ -23,7 +25,7 @@
 
 
     <footer>
-        <p>The Healthy Weight Challenge &copy; 2018 <span id="today"></span></p>
+        <p>articles &copy; 2018 <span id="today"></span></p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
